Correction collab et overflow-x

--- a/_base/_reset.scss
+++ b/_base/_reset.scss
@@ -5,11 +5,12 @@
 //----------------------------------------------------//
 
 html {
+    width: 100vw;
+    overflow-x: hidden;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-
 }
 
 *,
