--- a/_layout/_article.scss
+++ b/_layout/_article.scss
@@ -1,13 +1,13 @@
 
 .interface {
     position: relative; 
-    margin: 4em auto;
+    margin: 0 auto;
     background-color: #fff;
 }
 
 .wrap-collab {
     position: relative; 
-    bottom: 5.5em;
+    bottom: 1.5em;
     padding: 1em 0;
     width: 50vw;
     margin: 0 auto;
@@ -18,4 +18,19 @@
 
 .collab {
     color: #fff;
+}
+
+.img-auteur {
+    display: none;
+}
+
+.wrap-nom-auteur {
+    width: 5em;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+.auteur-prenom {
+    font-weight: 300;
 }
